--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Image Pixelizer</h1>
+        <h1>Pic Pixelizer</h1>
         
         <input type="file" id="imageUpload" accept="image/*">
         
